--- a/src/main.css
+++ b/src/main.css
@@ -113,27 +113,22 @@ h1 .hi-emoji-wrapper {
 
 h1 .hi-emoji {
   display: inline-block;
-  animation: greet 3s cubic-bezier(0.65, 0.05, 0.36, 1) infinite;
+  animation: greet 4s cubic-bezier(0.65, 0.05, 0.36, 1) infinite;
 }
 
 @keyframes greet {
-  0% {
-    transform: rotate(70deg);
-  }
-  5% {
-    transform: rotate(70deg);
-  }
-  45% {
-    transform: rotate(0deg);
-  }
-  55% {
-    transform: rotate(0deg);
-  }
-  95% {
-    transform: rotate(70deg);
-  }
+  0%,
+  20%,
+  40%,
+  60%,
+  80%,
   100% {
-    transform: rotate(70deg);
+    transform: rotate(10deg);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotate(80deg);
   }
 }
 
