--- a/src/main.css
+++ b/src/main.css
@@ -38,7 +38,8 @@ body {
   height: calc(100vh - 8rem);
   min-height: 20rem;
   box-sizing: border-box;
-  margin: 4rem 2rem;
+  margin: 6rem auto;
+  padding: 0 2rem;
   text-align: right;
   user-select: none;
 }
@@ -171,7 +172,7 @@ a svg {
 footer {
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 2rem;
   border-top: 1px solid;
   opacity: 0.4;
 }
