--- a/src/main.css
+++ b/src/main.css
@@ -1,23 +1,9 @@
 :root {
-  --bg-light: #fff2d2;
-  --shallow-bg-light: #ffb92e;
-  --color-light: #b52a6f;
-
-  /* --bg-light: #fddf05;
-  --shallow-bg-light: #7ae3fc;
-  --color-light: #ff4a9c; */
-
-  --bg-dark: #242957;
-  --shallow-bg-dark: #f44e21;
-  --color-dark: #e5d6bd;
-
-  --toggle-dark-transition: all 0.4s cubic-bezier(0.65, 0.05, 0.36, 1);
+  --toggle-dark-transition: all 0.8s cubic-bezier(0.65, 0.05, 0.36, 1);
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
-  color: var(--color-light);
-  background-color: var(--bg-light);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -44,7 +30,7 @@ body {
   user-select: none;
 }
 
-.dark-switch {
+.theme-switch {
   position: fixed;
   top: 16px;
   right: 44px;
@@ -54,18 +40,10 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background-color: var(--shallow-bg-light);
-  color: var(--color-light);
   transition: var(--toggle-dark-transition);
 }
 
-.dark-switch.is-dark {
-  background-color: var(--shallow-bg-dark);
-  color: var(--color-dark);
-  transition: var(--toggle-dark-transition);
-}
-
-.dark-bg {
+.front-mask {
   position: fixed;
   z-index: -1;
   right: -1940px;
@@ -75,27 +53,28 @@ body {
   align-items: center;
   width: 4000px;
   height: 4000px;
-  background-color: var(--bg-dark);
   transform: scale(0.001);
   border-radius: 50%;
-  transition: all 0.4s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
-.dark-bg.is-full {
-  transform: scale(2);
+.front-mask.is-full {
+  animation: full-mask 1.1s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+@keyframes full-mask {
+  0% {
+    transform: scale(0.001);
+  }
+  99% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(0.001);
+  }
 }
 
 main,
 footer {
-  border-color: var(--color-light);
-  color: var(--color-light);
-  transition: var(--toggle-dark-transition);
-}
-
-main.is-dark,
-footer.is-dark {
-  border-color: var(--color-dark);
-  color: var(--color-dark);
   transition: var(--toggle-dark-transition);
 }
 
@@ -143,8 +122,10 @@ p {
   margin: 0.75rem 0;
 }
 
-P.links {
-  margin-bottom: 1rem;
+.link-wrapper {
+  display: inline-block;
+  border-radius: 4px;
+  margin: 1rem 0.5rem 0;
 }
 
 a {
@@ -154,14 +135,6 @@ a {
   padding: 0.2em 0.4em;
   border-radius: 4px;
   text-decoration: none;
-  color: var(--color-light);
-  background: var(--shallow-bg-light);
-  transition: var(--toggle-dark-transition);
-}
-
-main.is-dark a {
-  color: var(--color-dark);
-  background: var(--shallow-bg-dark);
   transition: var(--toggle-dark-transition);
 }
 
