--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,21 @@
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "VT323";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/vt323-v17-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 :root {
-  --toggle-dark-transition: all 0.8s cubic-bezier(0.65, 0.05, 0.36, 1);
+  --toggle-theme-transition: all 0.8s cubic-bezier(0.65, 0.05, 0.36, 1);
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-  color-scheme: light dark;
-
+  font-family:
+    "VT323" Inter,
+    system-ui,
+    Avenir,
+    Helvetica,
+    Arial,
+    sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
