--- a/src/main.css
+++ b/src/main.css
@@ -51,7 +51,17 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transition: var(--toggle-dark-transition);
+  transition: var(--toggle-theme-transition);
+}
+
+.theme-switch svg {
+  transition: transform 0s;
+  transform: rotate3d(0, 1, 0, 0deg);
+}
+
+.theme-switch.is-rotate svg {
+  transition: var(--toggle-theme-transition);
+  transform: rotate3d(0, 1, 0, -360deg);
 }
 
 .front-mask {
@@ -86,7 +96,7 @@ body {
 
 main,
 footer {
-  transition: var(--toggle-dark-transition);
+  transition: var(--toggle-theme-transition);
 }
 
 h1 {
@@ -124,29 +134,30 @@ h1 .hi-emoji {
 }
 
 .bio {
-  font-size: 1.3em;
+  font-size: 1.75rem;
   font-weight: 300;
   margin: 0 0 4rem;
 }
 
 p {
-  margin: 0.75rem 0;
+  margin: 0.75rem 0 0.25rem;
+  font-size: 1.25rem;
 }
 
 .link-wrapper {
   display: inline-block;
   border-radius: 4px;
-  margin: 1rem 0.5rem 0;
+  margin: 1rem 0 0 0.5rem;
 }
 
 a {
   display: inline-flex;
   align-items: center;
-  font-size: 1em;
+  font-size: 1.25rem;
   padding: 0.2em 0.4em;
   border-radius: 4px;
   text-decoration: none;
-  transition: var(--toggle-dark-transition);
+  transition: var(--toggle-theme-transition);
 }
 
 a svg {
@@ -158,10 +169,7 @@ footer {
   bottom: 0;
   left: 2rem;
   border-top: 1px solid;
-  opacity: 0.4;
-}
-footer p {
-  font-size: 0.5rem;
+  opacity: 0.5;
 }
 footer p:last-child {
   margin-bottom: 0;
