--- a/src/main.css
+++ b/src/main.css
@@ -9,8 +9,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html,
 body {
   margin: 0;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 
@@ -62,22 +65,13 @@ body {
   height: 4000px;
   transform: scale(0.001);
   border-radius: 50%;
+  box-shadow: 0px 0px 200px 0px rgba(0, 0, 0, 0.55);
+  transition: transform 0s;
 }
 
 .front-mask.is-full {
-  animation: full-mask 1.1s cubic-bezier(0.65, 0.05, 0.36, 1);
-}
-
-@keyframes full-mask {
-  0% {
-    transform: scale(0.001);
-  }
-  99% {
-    transform: scale(2);
-  }
-  100% {
-    transform: scale(0.001);
-  }
+  transform: scale(2);
+  transition: transform 1.1s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 main,
