--- a/src/main.css
+++ b/src/main.css
@@ -94,21 +94,21 @@ h1 .hi-emoji-wrapper {
 
 h1 .hi-emoji {
   display: inline-block;
-  animation: greet 4s cubic-bezier(0.65, 0.05, 0.36, 1) infinite;
+  animation: greet 1s cubic-bezier(0.65, 0.05, 0.36, 1) infinite;
+  animation-fill-mode: forwards;
+  animation-play-state: paused;
+}
+
+h1 .hi-emoji.greet {
+  animation-play-state: running;
 }
 
 @keyframes greet {
   0%,
-  20%,
-  40%,
-  60%,
-  80%,
   100% {
     transform: rotate(10deg);
   }
-  30%,
-  50%,
-  70% {
+  50% {
     transform: rotate(80deg);
   }
 }
